# wedy

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.prod.yml  docker-compose.yml
backend/: .env.example  .env.production.example  Dockerfile  Dockerfile.dev  Dockerfile.prod  README.md  pyproject.toml  pytest.ini  test_merchant_implementation.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/core/: config.py  database.py  exceptions.py  security.py
backend/app/models/: __init__.py  analytics.py  analytics_model.py  category_model.py  feature_model.py  image_model.py  merchant_contact_model.py  merchant_model.py  merchant_subscription_model.py  payment.py  payment_model.py  review.py  review_model.py  service.py  service_model.py  tariff_model.py  user.py  user_interaction_model.py  user_model.py
backend/app/repositories/: base.py  category_repository.py  merchant_repository.py  payment_repository.py  review_repository.py  service_repository.py  user_repository.py
backend/app/schemas/: auth.py  auth_schema.py  category_schema.py  common.py  common_schema.py  merchant.py  merchant_schema.py  payment.py  payment_schema.py  review_schema.py  service.py  service_schema.py  user.py  user_schema.py
backend/app/utils/: constants.py  (+3 more)
backend/scripts/: activate_merchant_subscriptions.py  create_featured_services.sh  init.sql  init_db.py  seed_data.py  seed_featured_services.py  test_manual_payme.py  wait_for_db.py
backend/tests/: conftest.py  test_integration_basic.py  test_payment_api.py  test_payment_models.py  test_payment_service.py
(+390 files in other folders)
